--- a/muscle/muscleService/src/main/resources/GeneralConfiguration.properties
+++ b/muscle/muscleService/src/main/resources/GeneralConfiguration.properties
@@ -1,6 +1,6 @@
 property.general.iSeriesName=CRI400F
 property.general.user=BCOINFEPC
-property.general.pass=marmes0317
+property.general.pass=
 property.build.sqlrpgle.object=CRTSQLRPGI OBJ(&L/&N) SRCFILE(&L/&F) SRCMBR(&M) OBJTYPE(&O) RPGPPOPT(*LVL2) TGTRLS(*CURRENT) DATFMT(*ISO) TIMFMT(*ISO) REPLACE(*YES)
 property.build.rpgle.pgm=CRTBNDRPG PGM(&L/&N) SRCFILE(&L/&F) SRCMBR(&M) REPLACE(*YES)
 property.build.rpgle.module=CRTRPGMOD MODULE(&L/&N) SRCFILE(&L/&F) SRCMBR(&M) REPLACE(*YES)
